envs/templates/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth
  name: ticketing-auth-v1-dev
  namespace: team-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: kevintang1985/auth

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: ticketing-auth-v1-dev
  namespace: team-ticketing
spec:
  type: NodePort
  ports:
    - name: auth
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: auth
